@@ -71,7 +71,7 @@ def comment_sent(request):
 				# saving comment
 				c.save()
 				# now let's mail the people who wants a notification for this entry
-				send_comment_notification(c.entry)
+				send_comment_notification(c.entry, request.user)
 				resp["success"] = u"yorumunuz gönderildi.."
 				return HttpResponse(simplejson.dumps(resp))
 			else:
